--- a/CourseTable/coursetable.html
+++ b/CourseTable/coursetable.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <table>
-        <caption>宜蘭縣成功國小</caption>
+        <caption>宜蘭縣成功國民小學九十八年度日課表</caption>
         <thead>
             <tr>
                 <th>時段</th>
