--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a{
+            text-decoration: none;
+            display: flex;
+            color: #000;;
+            padding: 20px 0 0 20px;
+        }
+    </style>
 </head>
 <body>
-    <a href="/Hw01/hw01.html">網頁切版</a>
-    <a href="/CourseTable/coursetable.html">課表</a>
-    <a href="/Whoscall/HW03_whoscall.html">whos call切版</a>
+    <a href="/Hw01/hw01.html">Day01：網頁切版</a>
+    <a href="/CourseTable/coursetable.html">Day02：課表</a>
+    <a href="/Whoscall/HW03_whoscall.html">Day02：whos call切版</a>
 </body>
 </html>
