--- a/Whoscall/HW03_whoscall.html
+++ b/Whoscall/HW03_whoscall.html
@@ -19,6 +19,7 @@
         }
         .web {
             width: 960px;
+            margin: auto;
         }
         .navbar-container {
             width: 960px;
@@ -334,10 +335,9 @@
         }
         .mainfooter-container {
             width: 880px;
-            height: 310px;
             background-color: #2c323f;
             margin: 100px 0 0;
-            padding: 30px 40px 44px;
+            padding: 30px 40px 20px;
         }
         .mainfooter-row {
             display: flex;
