--- a/Whoscall/HW03_whoscall.html
+++ b/Whoscall/HW03_whoscall.html
@@ -424,8 +424,10 @@
             color: #f5f6f9;
             padding-right:20px;
         }
-        .locale-toggle .locale{
+        .locale-toggle select{
             background-color: #2c323f ;
+            border-color: none;
+            color: #fff;
         }
         /* 不會改下拉是選單底色&字顏色 */
     </style>
@@ -658,7 +660,7 @@
 
                         <a href="#"><i class="fa-solid fa-globe "></i></a>
                         <div class="locate-selet">
-                            <select name="locale" style="width:100px">
+                            <select style="width:100px">
 
                             <option value="">英文</option>
                             <option value="" selected>中文</option>
