--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     </style>
 </head>
 <body>
-    <a href="/Hw01/hw01.html">Day01：網頁切版</a>
-    <a href="/CourseTable/coursetable.html">Day02：課表</a>
-    <a href="/Whoscall/HW03_whoscall.html">Day02：whos call切版</a>
+    <a href="/Hw01/hw01.html">Day01 : 網頁切版</a>
+    <a href="/CourseTable/coursetable.html">Day02 : 課表</a>
+    <a href="/Whoscall/HW03_whoscall.html">Day02 : whos call 切版</a>
+    <a href="/Whoscall/New_whoscall.html">Day03 : whos call 重切2.0版</a>
 </body>
 </html>
