--- a/Whoscall/New_whoscall.html
+++ b/Whoscall/New_whoscall.html
@@ -12,13 +12,25 @@
             font-family: 'Noto Sans TC', sans-serif;
         }
         /*----------------------------------*/
-        
+        body{
+            padding-top: 69px;
+            background-color: #fff;
+            
+        }
+        .main-header{
+            width: 100%;
+            background-color: #fff;
+            box-shadow: 0 2px 5px rgb(0 0 0 / 20%);
+            position: fixed;
+            top: 0;
+            z-index: 5; 
+        }
         .header-content{
             width: 960px;
             display: flex;
             align-items: center;
             margin: auto;
-            padding: 10px 0;
+            padding: 10px 0; 
         }
         .main-logo img{
             width: 100px;
@@ -31,7 +43,7 @@
         }
         .main-nav a{
             color: #2c323f;
-            font-size: 18px;
+            font-size: 16px;
             font-weight: 300;
             padding: 4px 10px;
         }
@@ -41,7 +53,7 @@
         .btn-download{
             border: none;
             background-color: #00c300;
-            padding: 10px 20px;
+            padding: 10px 25px;
             border-radius: 100px;
             color: #fff;
             font-size: 20px;
@@ -75,22 +87,23 @@
             display: block;
             width: fit-content;
             background-color: #00c300;
-            padding: 10px 20px;
+            padding: 15px 60px;
             border-radius: 100px;
             color: #fff;
-            font-size: 20px;
-            margin-bottom: 10px;
+            font-size: 25px;
+            font-weight: 300;
+            margin: 20px 0 5px 0; 
         }
         p.discount{
             color: #00c300;
-            font-size: 20px;
+            font-size: 18px;
+            font-weight: 500;
         }
         .section-kv .radius:last-child{
             text-align: right;
         }
 
         /* ---------------------------------- */
-        .section-call{}
         .section-call .call{
             width: 960px;
             padding: 100px 0;
