--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
                 <a href="RWD/HW06-RWD.html">HW06 <br> RWD </a>
                 <!-- <p>響應式網頁 各設備不同的畫面</p> -->
             </div>
+            <div class="item">
+                <a href="NumberGuessingGame/HW01-NumberGuessingGame.html"> 終極密碼 </a>
+                <!-- <p></p> -->
+            </div>
         </div>
     </section>
 
