--- a/NumberGuessingGame/HW01-NumberGuessingGame.html
+++ b/NumberGuessingGame/HW01-NumberGuessingGame.html
@@ -199,7 +199,7 @@
       function getRandomInt(min,max){
         min = Math.ceil(min);
         max = Math.floor(max);
-        return Math.floor(Math.random()*(max - min) + min);
+        return Math.floor(Math.random()*(max - min + 1) + min);
       }
         let start = document.querySelector('.start')
         let startBtn = document.querySelector('.start-button')
