--- a/NumberGuessingGame/HW01-NumberGuessingGame.html
+++ b/NumberGuessingGame/HW01-NumberGuessingGame.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <title>Number Guessing Game</title>
     <style>
-      *{
-          margin: 0;
-          padding: 0;
-          list-style: none;
-    }
-    
+         
     .start{
         background-color: rgb(0,0,0, .5);
         width: 100%;
