--- a/selection/HW07_select.html
+++ b/selection/HW07_select.html
@@ -64,7 +64,7 @@
             background-color: rgb(172, 165, 153);
         }
 
-        @media screen and (width < 768px) {
+        @media screen and (max-width: 768px) {
             .HB {
                 width: 40px;
                 height: 40px;
@@ -224,7 +224,7 @@
             }
         }
 
-        @media screen and (width >=768px) {
+        @media screen and (min-width:769px) {
             .HB {
                 display: none;
             }
