--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
                 <a href="selection/HW07_select.html">HW07 <br> RWD 選單 </a>
                 <!-- <p>選取器</p> -->
             </div>
+            <div class="item">
+                <a href="Altis360/ImageArrayAltis.html">JS HW <br> 360度賞車 </a>
+                <!-- <p>JS動態</p> -->
+            </div>
         </div>
     </section>
 
