--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
                 <a href="Altis360/ImageArrayAltis.html">JS HW <br> 360度賞車 </a>
                 <!-- <p>JS動態</p> -->
             </div>
+            <div class="item">
+                <a href="Lol/LoL_CardStatic.html">JS HW <br> LOL </a>
+                <!-- <p>JS動態</p> -->
+            </div>
         </div>
     </section>
 
