--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@
                 <a href="Lol/LoL_CardStatic.html">JS HW <br> LOL </a>
                 <!-- <p>JS動態</p> -->
             </div>
+            <div class="item">
+                <a href="Maikon/Maikon.html">HW08 <br> Maikon </a>
+                <!-- <p>Maikon 手切</p> -->
+            </div>
+            
         </div>
     </section>
 
