--- a/Maikon/Maikon.html
+++ b/Maikon/Maikon.html
@@ -38,8 +38,8 @@
     .container {
         max-width: 1200px;
         margin: auto;
-        padding-left: 10px;
-        padding-right: 10px;
+        /* padding-left: 10px;
+        padding-right: 10px; */
     }
 
     a {
@@ -146,7 +146,7 @@
     /*-------------- kv--------------- */
     .container-kv {
         
-        padding: 30px 15px;
+        padding: 30px 0;
         margin-top: 40px;
     }
 
@@ -1106,7 +1106,7 @@
         }
 
         .container-kv {
-            padding: 30px;
+            /* padding: 30px 0; */
 
         }
 
