--- a/Maikon/Maikon.html
+++ b/Maikon/Maikon.html
@@ -145,8 +145,7 @@
 
     /*-------------- kv--------------- */
     .container-kv {
-        
-        padding: 30px 0;
+        padding: 30px;
         margin-top: 40px;
     }
 
@@ -951,7 +950,8 @@
     .container-copyright .row {
         display: flex;
 
-        padding: 30px;
+        padding: 30px 0;
+        margin: auto;
 
     }
 
