--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
                 <a href="whoscall進階/BS_whoscall.html">HW09 <br>BS Whoscall</a>
                 <!-- <p>Maikon 手切</p> -->
             </div>
+            <div class="item">
+                <a href="1A2B/Numbergame.html">JS HW<br>1A2B</a>
+                <!-- <p>1A2B</p> -->
+            </div>
             
         </div>
     </section>
