--- a/1A2B/Numbergame.html
+++ b/1A2B/Numbergame.html
@@ -22,7 +22,7 @@
         padding: 60px 100px;
         display: flex;
         flex-direction: column;
-
+        align-items: center;
 
     }
 
@@ -66,6 +66,7 @@
         border-radius: 10px;
         display: flex;
         flex-direction: column;
+        background-color: rgb(246, 238, 214);
     }
 
     .history {
