--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
                 <a href="1A2B/Numbergame.html">JS HW<br>1A2B</a>
                 <!-- <p>1A2B</p> -->
             </div>
+            <div class="item">
+                <a href="Apple/apple-buy.html">JS HW<br>Apple官網復刻</a>
+                <!-- <p>1A2B</p> -->
+            </div>
+            <div class="item">
+                <a href="Calendar/Calendar.html">JS HW<br>Calendar</a>
+                <!-- <p>還未掛行程</p> -->
+            </div>
             
         </div>
     </section>
