--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                 <a href="Calendar/Calendar.html">JS HW<br>Calendar</a>
                 <!-- <p>還未掛行程</p> -->
             </div>
+            <div class="item">
+                <a href="map/maplibrary.html">JS HW<br>Map Library</a>
+                <!-- <p>地圖套件</p> -->
+            </div>
             
         </div>
     </section>
