--- a/map/maplibrary.html
+++ b/map/maplibrary.html
@@ -4,47 +4,88 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Library Map Taiwan</title>
+    <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <style>
     .container>.row {
         height: 100vh;
+        font-family: 'Noto Sans TC', sans-serif;
+        color: rgb(79, 69, 54);
     }
 
     #map {
-        height: 95%;
+        height: 90%;
     }
-    .info{
-        height: 80%;
+    label{
+        color: rgb(79, 69, 54);
+        font-weight: 500;
+        margin-bottom: 5px;
+        font-size: 18px;
     }
-    #title {
-        font-size: 23px;
-        margin-bottom: 10px;
+    .form-control {
+        color: rgb(79, 69, 54);
     }
 
+    .form-control:focus {
+        color: rgb(79, 69, 54);
+        background-color: #fff;
+        border-color: rgb(222, 191, 137);;
+        outline: 0;
+        box-shadow: 0 0 0 0.25rem rgba(222, 191, 137, 0.25);
+    }
+    h2{
+        color: rgb(79, 69, 54);
+        font-size: 25px;
+        margin: 0;
+        padding: 13.5px;
+        padding-left: 13px;
+    }
+
+    .info {
+        height: 90%;
+    }
+
+   
     .list {
-        height: 70%;
+        height: 450px;
         list-style: none;
     }
 
+    li {
+        font-size: 20px;
+    }
     a {
         text-decoration: none;
-        color: black;
+        color: rgb(205, 172, 122);
         font-size: 20px;
     }
-
     a:hover {
-        color: #aaa;
+        color: rgb(222, 180, 129);
     }
-
     p {
         font-size: 20px;
+        margin-bottom: 0px;
+        
+    }
+    /* for Chrome, Safari and Opera */
+    .list::-webkit-scrollbar,
+    p::-webkit-scrollbar {
+        display: none;
     }
 
-    strong {
-        margin-bottom: 10px;
+    /* for IE, Edge and Firefox */
+    .list,
+    p{
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
     }
 </style>
 
@@ -68,12 +109,9 @@
                     </div>
                 </div>
                 <div class="row">
-                    <h2 class="w-100 text-center p-3">
+                    <h2 class="w-100 ">
                         圖書館資訊
                     </h2>
-                </div>
-                <div class="row">
-                    <strong id="title"></strong>
                     <div class="col-12">
                         <div class="list">
                             <!-- <a href="#">基隆市文化局圖書館</a> -->
@@ -115,7 +153,7 @@
 
         //DOM
         const countySelect = document.querySelector('#county')
-        const libraryNameDis = document.querySelector('strong')
+        const libraryNameDis = document.querySelector('h2')
         const list = document.querySelector('.list')
 
         //function
@@ -151,7 +189,7 @@
             let localLibraryNameData = libraryData.filter(x => x["縣市"] == cityName)
 
             list.innerHTML = ''
-            libraryNameDis.innerText = ''
+            libraryNameDis.innerText = '圖書館資訊'
             localLibraryNameData.forEach(x => {
                 x["圖書館資訊"].forEach(y => {
                     list.setAttribute('style', 'overflow-y: scroll')
@@ -165,7 +203,15 @@
 
                     li.append(libraryName)
                     list.append(li)
-                    let marker = L.marker([y["Latitude"], y["Longitude"]])
+                    let center = [y["Latitude"], y["Longitude"]]
+                    const customIcon = L.icon({
+                        iconUrl: './placeholder.png',
+                        iconSize: [60, 60],
+                    });
+                    let marker = L.marker(center, {
+                        icon: customIcon,
+                        opacity: 5.0
+                    })
                     //緯度,經度
                     marker.bindPopup(
                         `
@@ -175,19 +221,19 @@
                         `
                     )
                     marker.addEventListener('click', function () {
+                        libraryNameDis.innerText = libraryName
                         list.removeAttribute('style', 'overflow-y: scroll')
                         list.innerHTML = ''
                         li.innerHTML = ''
-                        libraryNameDis.innerText = libraryName
 
                         let address = document.createElement('p')
-                        address.innerHTML = ' <strong>地址 :</strong>' + y["Address"]
+                        address.innerHTML = ' <strong>地址 :&emsp;</strong>' + y["Address"]
                         let tel = document.createElement('p')
-                        tel.innerHTML = '<strong>電話 : </strong>' + y["TEL"]
+                        tel.innerHTML = '<strong>電話 :&emsp;</strong>' + y["TEL"]
                         let fax = document.createElement('p')
-                        fax.innerHTML = '<strong>傳真 : </strong>' + y["FAX"]
+                        fax.innerHTML = '<strong>傳真 :&emsp;</strong>' + y["FAX"]
                         let urlP = document.createElement('p')
-                        urlP.innerHTML = '<strong>官網 : </strong>'
+                        urlP.innerHTML = '<strong>官網 :&emsp;</strong>'
                         let url = document.createElement('a')
                         url.setAttribute('href', `${y["URL"]}`)
 
@@ -195,7 +241,8 @@
                         url.innerHTML = ' <i class="fa-solid fa-house"></i>'
                         let intro = document.createElement('p')
                         intro.innerHTML = ' <strong>簡介 :</strong>' + y["Intro"]
-                        intro.setAttribute('style', 'overflow-y: scroll')
+                        
+                        intro.setAttribute('style', 'overflow-y: scroll;height: 330px')
 
                         li.append(tel)
                         li.append(fax)
@@ -228,6 +275,7 @@
 
             })
             countySelect.onchange = function () {
+                libraryNameDis.innerText = '圖書館資訊'
                 if (this.value != '') {
                     //改變地圖的焦點
                     let county = areaData.find(x => x.City == this.value)
