--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                 <a href="map/maplibrary.html">JS HW<br>Map Library</a>
                 <!-- <p>地圖套件</p> -->
             </div>
+            <div class="item">
+                <a href="MemoryGameFlower/MemoryGame.html">JS HW<br>MemoryGame </a>
+                <!-- <p>地圖套件</p> -->
+            </div>
             
         </div>
     </section>
