--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <!-- <p>地圖套件</p> -->
             </div>
             <div class="item">
-                <a href="MemoryGameFlower/MemoryGameRed-media.html">JS HW<br>MemoryGame </a>
+                <a href="MemoryGameFlower/MemoryGameRed-media.html">JS HW<br>MemoryGame Red</a>
                 <!-- <p>地圖套件</p> -->
             </div>
             
