--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
             </div>
             <div class="item">
                 <a href="MemoryGameFlower/MemoryGameRed-media.html">JS HW<br>MemoryGame Red</a>
+                <a href="MemoryGameFlower/MemoryGame-media.html">JS HW<br>MemoryGame Gold</a>
+
                 <!-- <p>地圖套件</p> -->
             </div>
             
