--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
             </div>
             <div class="item">
                 <a href="MemoryGameFlower/MemoryGameRed-media.html">JS HW<br>MemoryGame Red</a>
+                <!-- <p>地圖套件</p> -->
+            </div>
+            <div class="item">  
                 <a href="MemoryGameFlower/MemoryGame-media.html">JS HW<br>MemoryGame Gold</a>
-
                 <!-- <p>地圖套件</p> -->
             </div>
             
