--- a/index.html
+++ b/index.html
@@ -146,7 +146,12 @@
                 <a href="MemoryGameFlower/MemoryGame-media.html">JS HW<br>MemoryGame Gold</a>
                 <!-- <p>地圖套件</p> -->
             </div>
-            
+            <div class="item">
+                <a href="hatsukoi專題/Cart1.html">購物車1</a>
+            </div>
+            <div class="item">
+                <a href="hatsukoi專題/Cart2.html">購物車1</a>
+            </div>
         </div>
     </section>
 
