--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                             <h6 class="card-subtitle mb-2 text-muted">購物車</h6>
                             <p class="card-text"></p>
                             <div class="d-flex flex-column">
-                                <button href="hatsukoi專題/Cart1.html" class="btn btn-page m-2">購物車一</button>
-                                <button href="hatsukoi專題/Cart2.html" class="btn btn-page m-2">購物車二</button>
+                                <button href="/hatsukoi專題/Cart1.html" class="btn btn-page m-2">購物車一</button>
+                                <button href="/hatsukoi專題/Cart2.html" class="btn btn-page m-2">購物車二</button>
                             </div>
 
                         </div>
