--- a/hatsukoi專題/Cart1.html
+++ b/hatsukoi專題/Cart1.html
@@ -456,7 +456,7 @@
                                     <div class="cart-product-extras d-flex justify-content-between">
                                         <div class="cart-product-quantity m-2">
 
-                                            <select class="form-select form-select-sm" aria-label=".form-select-sm ">
+                                            <select class="form-select form-select-sm" aria-label="form-select-sm ">
                                                 <option selected></option>
                                                 <option value="1">1</option>
                                                 <option value="2">2</option>
