--- a/hatsukoi專題/Cart2.html
+++ b/hatsukoi專題/Cart2.html
@@ -451,12 +451,12 @@
                                         <!-- Button trigger modal -->
                                         <a type=""
                                             class="a-recipient p-2 d-flex align-items-center justify-content-between"
-                                            data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                            data-bs-toggle="modal" data-bs-target="#recipientLabel">
                                             請填寫收件人與購買人資料
                                             <i class="fa-solid fa-angle-right p-2"></i></a>
 
                                         <!-- Modal -->
-                                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
+                                        <div class="modal fade" id="recipientLabel" data-bs-backdrop="static"
                                             data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
                                             aria-hidden="true">
                                             <div class="modal-dialog modal-dialog-scrollable">
@@ -609,16 +609,16 @@
                                             我同意提供個人身分證字號／護照／居留證號碼，以供跨境物流方通關使用，並已了解跨境商品之
                                             <!-- Button trigger modal -->
                                             <a type="" class="a-ship" data-bs-toggle="modal"
-                                                data-bs-target="#staticBackdrop">物流需求</a>。
+                                                data-bs-target="#shippingindeed">物流需求</a>。
                                         </label>
                                         <!-- Modal -->
-                                        <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static"
-                                            data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel"
+                                        <div class="modal fade" id="shippingindeed" data-bs-backdrop="static"
+                                            data-bs-keyboard="false" tabindex="-1" aria-labelledby="shippingindeedLabel"
                                             aria-hidden="true">
                                             <div class="modal-dialog modal-dialog-centered">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5 class="modal-title" id="staticBackdropLabel">注意</h5>
+                                                        <h5 class="modal-title" id="shippingindeedLabel">注意</h5>
                                                         <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                             aria-label="Close"></button>
                                                     </div>
