--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="d-flex flex-column">
                                 <a href="/hatsukoi專題/Cart1.html" class="btn btn-page m-2">購物車一</a>
                                 <a href="/hatsukoi專題/Cart2.html" class="btn btn-page m-2">購物車二</a>
-                                <a href="/hatsukoi專題/coupon.html" class="btn btn-page m-2">購物車二</a>
+                                <a href="/hatsukoi專題/coupon.html" class="btn btn-page m-2">優惠券</a>
                             </div>
 
                         </div>
