--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                                 <a href="/hatsukoi專題/Cart1.html" class="btn btn-page m-2">購物車一</a>
                                 <a href="/hatsukoi專題/Cart2.html" class="btn btn-page m-2">購物車二</a>
                                 <a href="/hatsukoi專題/coupon.html" class="btn btn-page m-2">優惠券</a>
+                                <a href="/hatsukoi專題/fav.html" class="btn btn-page m-2">喜歡清單</a>
+
                             </div>
 
                         </div>
