--- a/NumberGuessingGame/HW01-NumberGuessingGame.html
+++ b/NumberGuessingGame/HW01-NumberGuessingGame.html
@@ -16,6 +16,8 @@
             --main-pink: #976666;
             --warn-pink:#f78080;
             font-family: 'Noto Sans TC', sans-serif;
+            --yellow:rgb(255, 237, 212);
+            --brown:#5d3100;
         }
 
         .start {
@@ -34,8 +36,8 @@
             height: 100px;
             font-size: 35px;
             font-weight: 600;
-            color: var(--main-pink);
-            border: 3px solid var(--main-pink);
+            color: var(--brown);
+            border: 3px solid var(--brown);
             border-radius: 10px;
         }
 
@@ -54,14 +56,14 @@
             text-align: center;
             font-size: 30px;
             font-weight: 600;
-            color: var(--main-pink);
+            color: var(--brown);
 
         }
 
         .wrap {
             width: 350px;
             background-color: #ffffff;
-            border: 3px solid var(--main-pink);
+            border: 3px solid var(--brown);
             border-radius: 15px;
             margin: auto;
         }
@@ -92,7 +94,7 @@
         .view h2 {
             font-size: 20px;
             text-align: center;
-            color: var(--main-pink);
+            color: var(--brown);
             margin: 10px;
         }
 
@@ -101,7 +103,7 @@
             height: 60px;
             width: 120px;
             font-weight: 600;
-            border: solid 2px var(--main-pink);
+            border: solid 2px var(--brown);
             border-radius: 15px;
         }
 
@@ -111,12 +113,12 @@
         }
 
         #myText {
-            color: var(--main-pink);
+            color: var(--brown);
             font-size: 22px;
             height: 60px;
             font-weight: 600;
             width: 120px;
-            border: solid 2px var(--main-pink);
+            border: solid 2px var(--brown);
             background-color: #ffffff;
             border-radius: 15px;
             text-align: center;
@@ -147,17 +149,17 @@
             width: 60px;
             height: 60px;
             margin: 5px 10px;
-            border: 2px solid var(--main-pink);
-            border-radius: 40px;
+            border: 2px solid var(--brown);
+            border-radius: 25px;
             font-size: 23px;
             font-weight: 600;
-            color: var(--main-pink);
+            color: var(--brown);
             background-color: var(--light-pink);
             font-family: 'Noto Sans TC', sans-serif;
         }
 
         .main-box button:hover {
-            background-color: #e0b8b0;
+            background-color:var(--yellow);
         }
 
         .reset {
@@ -173,14 +175,14 @@
             border-radius: 20px;
             font-size: 18px;
             font-weight: 800;
-            border: solid 2px  var(--main-pink);
+            border: solid 2px  var(--brown);
             background-color: var(--light-pink);
-            color: var(--main-pink);
+            color: var(--brown);
             font-family: 'Noto Sans TC', sans-serif;
         }
 
         .reset button:hover {
-            background-color:#e0bcb6;
+            background-color:var(--yellow);
         
         }
 
