--- a/NumberGuessingGame/HW01-NumberGuessingGame.html
+++ b/NumberGuessingGame/HW01-NumberGuessingGame.html
@@ -186,13 +186,16 @@
         
         }
 
-        @media screen and (min-width:768px){
+        @media screen and (max-width:768px){
             h1{
                 margin-bottom:10px ;
             }
-            main{
-                
-            }
+          .wrap{
+            transform: scale(0.8);
+          }
+          .start{
+            z-index: 10;
+          }
         }
     </style>
 </head>
