--- a/index.html
+++ b/index.html
@@ -275,9 +275,10 @@
                         <div class="card-body">
                             <h5 class="card-title">MemoryGame</h5>
                             <h6 class="card-subtitle mb-2 text-muted">JS HW</h6>
-                            <p class="card-text">地圖套件</p>
+                            <p class="card-text"></p>
                             <div class="d-flex flex-column">
                                 <a href="MemoryGameFlower/MemoryGameRed-media.html" class="btn btn-page m-2">MemoryGame Red</a>
+                                <a href="MemoryGameFlower/MemoryGame-media.html" class="btn btn-page m-2">MemoryGame Red</a>
                                 
                             </div>
 
